# generative-manim

./: .dockerignore  .gitignore  ANIMO.md  Dockerfile  GenScene.py  README.md  README_CN.md  README_DE.md  README_ES.md  README_KO.md  pyproject.toml  requirements-dev.txt
.devcontainer/: ~$vcontainer.json
.github/workflows/: ci.yml
animo/: README.md  pyproject.toml
api/: .env.example  README.md  __init__.py  auth.py  errors.py  llm_providers.py  requirements.txt  validation.py  video_utils.py
api/prompts/: manimDocs.py  system.py
api/public/: openapi.yaml
api/routes/: chat_generation.py  code_generation.py  health.py  models.py  video_generation.py  video_rendering.py
datasets/: dataset-2025-02-15T02-45-51-960Z.jsonl
docs/: README.md  cloud-deployment.md  featherless.md  manim-prompt-context.md  training-dataset-format.md
experiments/manim-skills-comparison/: README.md
tests/: conftest.py  test_chat_generation.py  test_code_generation.py  test_errors.py  test_health.py  test_image_management.py  test_litellm_provider.py  test_llm_providers.py  test_models.py  test_prompts.py  test_validation.py  test_video_generation.py  test_video_rendering.py  test_video_utils.py
training/: README.md  requirements.txt  validate_existing.py
training/benchmarks/: README.md  __init__.py  checks.py  compare.py  matrix.py  pass_k.py  run.py  suite.py
training/config/: base.yaml  dpo.yaml  grpo.yaml  sft.yaml
training/data/: generate_completions.py  generate_dpo_pairs.py  generate_grpo_rollouts.py  generate_prompts.py  prepare_sft_dataset.py  prompt_categories.py  (+1 more)
(+42 files in other folders)
